[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/SlimeGoo.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.0277, 1.00491 )

[node name="Goo" type="Area2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 2.0
color = Color( 0, 0.905882, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20.06, 0.906809 )
shape = SubResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Goo_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Goo_body_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
